--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Discord bot for SitePoint",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js"
+    "start": "index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michiel Mulders",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0"
   }
 }
