--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "discord-bot",
   "version": "1.0.0",
-  "description": "Discord bot for SitePoint",
+  "description": "Discord bot",
   "main": "index.js",
   "scripts": {
     "start": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Michiel Mulders",
+  "author": "lordoffatcats",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
