--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=NjkyMDU4NTA1MDQwODg3ODY4.Xqi5mQ.cl1v6jyX69Zb2hiFcpiEl2CP6Qo
+TOKEN=NjkyMDU4NTA1MDQwODg3ODY4.Xq2ebA.F716zP52l40-7Ee9ejk0g6Ie4lA
