--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
 	"FILTER_LIST" : ["nigga", "nigger", "beggi", "negri", "geir", "hamood", "habibi", "jói","siggi" ],
   "VALGERDUR" : ["valgerður", "valgerdur"],
-  "SIMP" : ["simp"]
+  "SIMP" : ["simp"],
+	"HVERAGERDI" : ["hveragerði", "hveragerdi"],
+	"ANGER" : ["angry", "anger"]
 }
