--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
   "VALGERDUR" : ["valgerður", "valgerdur"],
   "SIMP" : ["simp"],
 	"HVERAGERDI" : ["hveragerði", "hveragerdi"],
-	"ANGER" : ["angry", "anger"]
+	"ANGER" : ["angry", "anger"],
+	"ANGY" : ["angy"],
+	"EGG" : ["egg"]
 }
